<resources>
    <string name="app_name">Rock Paper Scissors!</string>
    <string name="example_guest">example: Guest</string>
    <string name="example_10">example: 10</string>
    <string name="enter_number_of_rounds">Enter number of rounds:</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="start_game">Start game!</string>
    <string name="todo">TODO</string>
</resources>
